# scan_paint_manipulator

./: README.md
example_interfaces/: CMakeLists.txt  package.xml
example_interfaces/action/: ExecuteTrajectory.action  ExecuteTrajectoryArray.action
example_interfaces/msg/: CartesianPose.msg  CommandPose.msg  Euler.msg  PoseMsg.msg  TrajectoryMsg.msg
example_interfaces/srv/: PoseTf.srv  SetAngle.srv  SetBool.srv  SetPC2.srv  TrajectoryMode.srv
mcx_ros/: CMakeLists.txt  package.xml
mcx_ros/libs/: __init__.py  motion_program.py  robot_command.py
mcx_ros/src/: action_client.py  client.py  execute_trajectory_action.py  laser_trajectory_action.py  read_manip.py  ros2api.py  test_paint_squad.py
mcx_ros/srv/: MoveSrv.srv
models/: Pipe_110.stl  detal_test.stl
paint_lidar/: package.xml  setup.cfg  setup.py
paint_lidar/launch/: launch.py  services_launch.py
paint_lidar/paint_lidar/: client_opening.py  example_pcl2.py  menu.py  nozzle_node.py  paint_wall.py  servece_send.py  servece_send_new.py  service_nozzle.py  service_opening.py  service_trajectory.py  tf_srv_pub.py
paint_lidar/paint_lidar/lidar_utils/: closeOpenNozzle.py  enum_set.py  gcode.py  geometry_utils.py  robot_move.py  servoPy.py  test_driver_laser.py  trajectory.py
paint_lidar/paint_lidar/manip_utils/: manip_send.py
paint_lidar/resource/gcode/: TestC.gcode  TestC_with.gcode  TestC_without.gcode  test_gcode.gcode
paint_lidar/scan_obj/: 1.pcd  2.pcd  3.pcd  4.pcd  5.pcd  6.pcd  scan_23_08.pcd  scan_door_birulevo.pcd  scan_wood_birulev2.pcd  scan_wood_birulevo.pcd  scan_wood_birulevo_17_08.pcd
(+4 files in other folders)
